// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BlogCard /> Should render correctly 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D"
    href="/blog/asdfg"
  >
    <div
      class="sc-ftvSup igEfOL"
    >
      <div
        class="sc-papXJ eRRswi"
      />
      <div
        class="sc-jqUVSM dcVjxQ"
      >
        <div
          aria-hidden="true"
          class="sc-bjUoiL iyDKRv"
        >
          <div
            class="sc-idiyUo gybJmj date container"
          >
            <div
              class="sc-dmRaPn gGrjMF"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-dIouRR iiidbO"
          >
            <h1
              class="sc-cxabCf fizvsH"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly when deleted 1`] = `
<div>
  <a
    aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
    class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D"
    href="/blog/mndyd8"
  >
    <div
      class="sc-ftvSup igEfOL"
    >
      <div
        class="sc-papXJ eRRswi"
      />
      <div
        class="sc-jqUVSM dcVjxQ"
      >
        <div
          aria-hidden="true"
          class="sc-bjUoiL iyDKRv"
        >
          <div
            class="sc-idiyUo gybJmj date container"
          >
            <div
              class="sc-dmRaPn gGrjMF"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-dIouRR iiidbO"
          >
            <h1
              class="sc-cxabCf fizvsH"
            >
              Untitled blog (DELETED)
            </h1>
            <div
              class="sc-bBrHrO dKgGej"
            >
              <div
                class="sc-bZkfAO"
              >
                <span
                  class="sc-kLLXSd bxEHil"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hHLeRK jFlueT"
          >
            <div
              class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
            >
              <style>
                .js .gg-image__img--hide-js {display: none;}
                .no-js .gg-image__img--hide-no-js {display: none;}
              </style>
              <div
                class="sc-evZas kJA-dLA"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-breuTD ckEWzJ"
                >
                  <div
                    class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                  >
                    <div
                      class="sc-iqcoie bwoPbu"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-hAZoDl jOwMww"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnykZs flfjbh"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-hAZoDl jPateM"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnykZs fJKDHF"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with all parameters supplied 1`] = `
<div>
  <a
    aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
    class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D"
    href="/blog/zxywvuts"
  >
    <div
      class="sc-ftvSup igEfOL"
    >
      <div
        class="sc-papXJ eRRswi"
      />
      <div
        class="sc-jqUVSM dcVjxQ"
      >
        <div
          aria-hidden="true"
          class="sc-bjUoiL iyDKRv"
        >
          <div
            class="sc-idiyUo gybJmj date container"
          >
            <div
              class="sc-dmRaPn gGrjMF"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                23-30 Dec
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                23-30
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                Dec
              </span>
            </div>
          </div>
          <div
            class="sc-dIouRR iiidbO"
          >
            <h1
              class="sc-cxabCf fizvsH"
            >
              St Ives  2018
            </h1>
            <div
              class="sc-bBrHrO dKgGej"
            >
              <div
                class="sc-bZkfAO"
              >
                <span
                  class="sc-kLLXSd bxEHil"
                  type="travel"
                >
                  Travel
                </span>
              </div>
            </div>
          </div>
          <div
            class="sc-hHLeRK jFlueT"
          >
            <div
              class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
            >
              <style>
                .js .gg-image__img--hide-js {display: none;}
                .no-js .gg-image__img--hide-no-js {display: none;}
              </style>
              <div
                class="sc-evZas kJA-dLA"
                style="padding-bottom: 100%;"
              >
                <div
                  class="sc-breuTD ckEWzJ"
                >
                  <div
                    class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                  >
                    <div
                      class="sc-iqcoie bwoPbu"
                      style="margin-left: -0px;"
                    />
                  </div>
                </div>
                <div
                  class="gg-image__img--hide-no-js"
                >
                  <img
                    alt="card"
                    class="sc-hAZoDl jOwMww"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnykZs flfjbh"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
                <div
                  class="gg-image__img--hide-js"
                >
                  <img
                    alt="card"
                    class="sc-hAZoDl jPateM"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                  <img
                    alt="card"
                    class="sc-fnykZs fJKDHF"
                    src="https://i.imgur.com/ppPEuDs.jpg"
                  />
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogCard /> Should render correctly with custom className 1`] = `
<div>
  <a
    aria-label="Blog 1 , NaN Invalid Date"
    class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D test-custom-classname"
    href="/blog/asdfg"
  >
    <div
      class="sc-ftvSup igEfOL"
    >
      <div
        class="sc-papXJ eRRswi"
      />
      <div
        class="sc-jqUVSM dcVjxQ"
      >
        <div
          aria-hidden="true"
          class="sc-bjUoiL iyDKRv"
        >
          <div
            class="sc-idiyUo gybJmj date container"
          >
            <div
              class="sc-dmRaPn gGrjMF"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                NaN Invalid Date
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                NaN
              </span>
            </div>
            <div
              class="sc-kgflAQ YFyoZ"
            >
              <span
                class="sc-gicCDI gfYzqt"
              >
                Invalid Date
              </span>
            </div>
          </div>
          <div
            class="sc-dIouRR iiidbO"
          >
            <h1
              class="sc-cxabCf fizvsH"
            >
              Blog 1 
            </h1>
          </div>
        </div>
      </div>
    </div>
  </a>
</div>
`;

exports[`<BlogsList /> Should render correctly 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with custom className 1`] = `
<div>
  <div
    class="test-custom-classname"
  >
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 cPOHiC"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
  </div>
</div>
`;

exports[`<BlogsList /> Should render correctly with deleteBlog function 1`] = `
<div>
  <div>
    <a
      aria-label="Blog 1 , NaN Invalid Date"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
      href="/blog/asdfg"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN Invalid Date
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  NaN
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Invalid Date
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Blog 1 
              </h1>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkzDqf dhXlGL blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="St Ives  2018, 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
      href="/blog/zxywvuts"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                St Ives  2018
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkzDqf dhXlGL blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Delete blog
      </span>
    </button>
    <a
      aria-label="Untitled blog (DELETED), 23to30 Dec, Tagged travel"
      class="sc-iBkjds fAWbEc sc-fEOsli cPLYA-D blogs-liststyles__StyledBlogCard-sc-if7ctk-1 faugAy"
      href="/blog/mndyd8"
    >
      <div
        class="sc-ftvSup igEfOL"
      >
        <div
          class="sc-papXJ eRRswi"
        />
        <div
          class="sc-jqUVSM dcVjxQ"
        >
          <div
            aria-hidden="true"
            class="sc-bjUoiL iyDKRv"
          >
            <div
              class="sc-idiyUo gybJmj date container"
            >
              <div
                class="sc-dmRaPn gGrjMF"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30 Dec
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  23-30
                </span>
              </div>
              <div
                class="sc-kgflAQ YFyoZ"
              >
                <span
                  class="sc-gicCDI gfYzqt"
                >
                  Dec
                </span>
              </div>
            </div>
            <div
              class="sc-dIouRR iiidbO"
            >
              <h1
                class="sc-cxabCf fizvsH"
              >
                Untitled blog (DELETED)
              </h1>
              <div
                class="sc-bBrHrO dKgGej"
              >
                <div
                  class="sc-bZkfAO"
                >
                  <span
                    class="sc-kLLXSd bxEHil"
                    type="travel"
                  >
                    Travel
                  </span>
                </div>
              </div>
            </div>
            <div
              class="sc-hHLeRK jFlueT"
            >
              <div
                class="sc-crXcEl dGlrBO sc-fLlhyt gIqfv"
              >
                <style>
                  .js .gg-image__img--hide-js {display: none;}
                  .no-js .gg-image__img--hide-no-js {display: none;}
                </style>
                <div
                  class="sc-evZas kJA-dLA"
                  style="padding-bottom: 100%;"
                >
                  <div
                    class="sc-breuTD ckEWzJ"
                  >
                    <div
                      class="sc-kDDrLX iHJcOX sc-ksZaOG hETmuT"
                    >
                      <div
                        class="sc-iqcoie bwoPbu"
                        style="margin-left: -0px;"
                      />
                    </div>
                  </div>
                  <div
                    class="gg-image__img--hide-no-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jOwMww"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs flfjbh"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                  <div
                    class="gg-image__img--hide-js"
                  >
                    <img
                      alt="card"
                      class="sc-hAZoDl jPateM"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                    <img
                      alt="card"
                      class="sc-fnykZs fJKDHF"
                      src="https://i.imgur.com/ppPEuDs.jpg"
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </a>
    <button
      class="sc-dkzDqf jQQPA-D blogs-liststyles__StyledButton-sc-if7ctk-2 bknPIw"
      disabled=""
      type="button"
    >
      <span
        class="sc-eCYdqJ ghZAyu"
      >
        Delete blog
      </span>
    </button>
  </div>
</div>
`;
